Complete to the ELB access tier
Complete to the ELB access tier

--- a/applications/webapp/html/index.html
+++ b/applications/webapp/html/index.html
@@ -27,7 +27,7 @@
 							<div class="inner">
 								<h1>Kubernetes EKS Scaling Demonstration</h1>
 								<h2>Website</h2>
-                                <p>This demo site is part of the <a href="https://github.com/ModusCreateOrg/k8a-eks-scaling-demo">>Modus Create Kubernetes EKS Scaling Demo</a>.</p>
+                                <p>This demo site is part of the <a href="https://github.com/ModusCreateOrg/k8s-eks-scaling-demo">>Modus Create Kubernetes EKS Scaling Demo</a>.</p>
 
                                 <hr/>
 
@@ -99,7 +99,7 @@
 									<li><a href="https://twitter.com/moduscreate" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://www.facebook.com/moduscreate/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 									<li><a href="https://www.instagram.com/moduscreate/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="https://github;com/ModusCreateOrg/k8s-eks-scaling-demo" class="icon fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://github.com/ModusCreateOrg/k8s-eks-scaling-demo" class="icon fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</article>
 
@@ -349,7 +349,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-                        <p class="copyright">&copy; 2018 by <a href="https://moduscreate.com/">Modus Create</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+                        <p class="copyright">&copy; 2019 by <a href="https://moduscreate.com/">Modus Create</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
